Sonar warning fixes